typescript/checker/tests/conformance/expressions/typeGuards/typeGuardNarrowsToLiteralType.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            155,
        ),
        hi: BytePos(
            160,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typeGuardNarrowsToLiteralType.ts:4:5
  |
4 | let value: string;
  |     ^^^^^

